[gd_scene load_steps=6 format=3 uid="uid://crqd5idfg43dx"]

[ext_resource type="Theme" uid="uid://cniktbk5ckwmp" path="res://style/WarmLight.theme" id="1_tcibq"]
[ext_resource type="Script" uid="uid://blaea5cjijoj4" path="res://Tools/ProgressClock/scripts/TitleEdit.gd" id="2_eg3d7"]
[ext_resource type="Script" uid="uid://cksiip4i51383" path="res://Tools/Note/scripts/note.gd" id="2_jofqp"]
[ext_resource type="Script" uid="uid://8xfomon67q8" path="res://Tools/Note/scripts/edit.gd" id="2_vaeu6"]
[ext_resource type="Script" uid="uid://c7boavfdlcmfl" path="res://Tools/ProgressClock/scripts/BodyEdit.gd" id="3_vaeu6"]

[node name="Window2" type="Window"]
handle_input_locally = false
gui_embed_subwindows = true
title = "Note"
initial_position = 1
size = Vector2i(400, 200)
min_size = Vector2i(400, 200)
theme = ExtResource("1_tcibq")

[node name="Body" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_tcibq")
script = ExtResource("2_jofqp")

[node name="VBoxContainer" type="VBoxContainer" parent="Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Body/VBoxContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = -1

[node name="File" type="PopupMenu" parent="Body/VBoxContainer/HBoxContainer/MenuBar"]
title = "File"
position = Vector2i(22, 22)
size = Vector2i(100, 50)
min_size = Vector2i(100, 50)
theme = ExtResource("1_tcibq")

[node name="VBoxContainer" type="VBoxContainer" parent="Body/VBoxContainer/HBoxContainer/MenuBar/File"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Save As" type="Button" parent="Body/VBoxContainer/HBoxContainer/MenuBar/File/VBoxContainer"]
layout_mode = 2
text = "Save as..."

[node name="Load" type="Button" parent="Body/VBoxContainer/HBoxContainer/MenuBar/File/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="TagsContainer" type="ScrollContainer" parent="Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"TagContainer"
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Body/VBoxContainer/HBoxContainer/TagsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddTag" type="Button" parent="Body/VBoxContainer/HBoxContainer/TagsContainer/HBoxContainer"]
layout_mode = 2
text = "+"

[node name="EditEnable" type="Button" parent="Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Editing"
script = ExtResource("2_vaeu6")

[node name="ScrollContainer" type="ScrollContainer" parent="Body/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_tcibq")
follow_focus = true
scroll_vertical_custom_step = 1.0
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Body/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Body/VBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleEdit" type="TextEdit" parent="Body/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_tcibq")
theme_type_variation = &"HeaderLarge"
placeholder_text = "Title."
editable = false
wrap_mode = 1
scroll_fit_content_height = true
script = ExtResource("2_eg3d7")

[node name="BodyEdit" type="TextEdit" parent="Body/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_tcibq")
placeholder_text = "Lorem ipsum dolor sit amet."
editable = false
wrap_mode = 1
scroll_fit_content_height = true
script = ExtResource("3_vaeu6")

[node name="ReferenceRect" type="ReferenceRect" parent="Body/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[connection signal="toggled" from="Body/VBoxContainer/HBoxContainer/EditEnable" to="Body/VBoxContainer/HBoxContainer/EditEnable" method="_on_toggled"]
[connection signal="toggled" from="Body/VBoxContainer/HBoxContainer/EditEnable" to="Body/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer/TitleEdit" method="_on_edit_toggled"]
[connection signal="toggled" from="Body/VBoxContainer/HBoxContainer/EditEnable" to="Body/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer/BodyEdit" method="_on_edit_toggled"]
[connection signal="text_changed" from="Body/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer/TitleEdit" to="Body" method="_on_title_text_changed"]
[connection signal="text_changed" from="Body/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer/BodyEdit" to="Body" method="_on_body_edit_text_changed"]
